--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <link href='./favicon.ico' rel='icon' type='image/x-icon'/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-.button1 {background-color: #4CAF50; border: none; font-size: 50px; margin:11px;}
-.button2 {background-color: #008CBA; border: none; font-size: 50px; margin:11px;}
-.button3 {background-color: #f44336; border: none; font-size: 50px; margin:11px;}
-body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
+.button1 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
+.button2 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
+.button3 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
+body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #0e0e0e;}
 </style>
 </head>
 <body>
