--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 .button1 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
 .button2 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
 .button3 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
+.button4 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
 body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #0e0e0e;}
 </style>
 </head>
@@ -16,6 +17,7 @@ body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolut
 <button class="button1" onclick="myMovies()">Movies</button><br>	
 <button class="button2" onclick="myWebSeries()">WebSeries</button><br>
 <button class="button3" onclick="myAdult()">Adult</button>
+<button class="button4" onclick="myDiscord()">Join Discord</button>
 
 <script>
 function myMovies() {
@@ -32,6 +34,12 @@ function myWebSeries() {
 <script>
 function myAdult() {
   location.replace("https://adult-torgle.blogspot.com/")
+}
+</script>
+
+<script>
+function myAdult() {
+  location.replace("https://discord.gg/9dQTBxnB7A")
 }
 </script>
 
