--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolut
 
 <button class="button1" onclick="myMovies()">Movies</button><br>	
 <button class="button2" onclick="myWebSeries()">WebSeries</button><br>
-<button class="button3" onclick="myAdult()">Adult</button>
+<button class="button3" onclick="myAdult()">Adult</button><br>
 <button class="button4" onclick="myDiscord()">Join Discord</button>
 
 <script>
