--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolut
 <button class="button1" onclick="myMovies()">Movies</button><br>	
 <button class="button2" onclick="myWebSeries()">WebSeries</button><br>
 <button class="button3" onclick="myAdult()">Adult</button><br>
-<button class="button4" onclick="myDiscord()">Discord</button>
+<button class="button4" onclick="myWatch()">https://watch.torglr.ml/</button>
 
 <script>
 function myMovies() {
@@ -38,8 +38,8 @@ function myAdult() {
 </script>
 
 <script>
-function myAdult() {
-  location.replace("https://discord.gg/9dQTBxnB7A")
+function myWatch() {
+  location.replace("https://watch.torgle.ml/")
 }
 </script>
 
