--- a/index.html
+++ b/index.html
@@ -1,47 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Torgle | Google For Torrent</title>
-<link href='./favicon.ico' rel='icon' type='image/x-icon'/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-.button1 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
-.button2 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
-.button3 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
-.button4 {background-color: #ffb91c; border: none; font-size: 50px; margin:11px;}
-body {text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #0e0e0e;}
-</style>
-</head>
 <body>
-
-<button class="button1" onclick="myMovies()">Movies</button><br>	
-<button class="button2" onclick="myWebSeries()">WebSeries</button><br>
-<button class="button3" onclick="myAdult()">Adult</button><br>
-<button class="button4" onclick="myWatch()">Torgle Watch</button>
-
-<script>
-function myMovies() {
-  location.replace("https://movies-torgle.blogspot.com/")
-}
-</script>
-
-<script>
-function myWebSeries() {
-  location.replace("https://webseries-torgle.blogspot.com/")
-}
-</script>
-
-<script>
-function myAdult() {
-  location.replace("https://adult-torgle.blogspot.com/")
-}
-</script>
-
-<script>
-function myWatch() {
-  location.replace("https://watch.torgle.ml/")
-}
-</script>
-
+<meta http-equiv="refresh" content="0; URL=https://redirect-torgle.ml" />
 </body>
-</html> 
+</html>
