--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<meta http-equiv="refresh" content="0; URL=https://redirect-torgle.ml" />
+<meta http-equiv="refresh" content="0; URL=https://watch-torgle.blogspot.com/" />
 </body>
 </html>
