--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Torgle | Google For Torrent</title>
-<link href='./favicon.ico' rel='icon' type='image/x-icon'/>
+<link href='https://torgle.ml/favicon.ico' rel='icon' type='image/x-icon'/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .button1 {background-color: #ffb91c; border: none; font-size: 37px; margin:11px;}
