--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <style>
 .button1 {background-color: #ffb91c; border: none; font-size: 37px; margin:11px;}
 .button2 {background-color: #ffb91c; border: none; font-size: 37px; margin:11px;}
+.button3 {background-color: #ffb91c; border: none; font-size: 37px; margin:11px;}
 body {background-color: #0e0e0e; text-align: center; flex-wrap: wrap; overflow: hidden;   position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
 </style>
 </head>
 <body>
 <button class="button1" onclick="myWatch()">Watch Movies</button><br>	
 <button class="button2" onclick="myOuvp()">Online URL Video Player</button><br>
+<button class="button3" onclick="myXvideos()">Xvideos Profile</button>
 <script>
 function myWatch() {
   location.replace("https://watch-torgle.blogspot.com/")
@@ -21,6 +23,11 @@ function myWatch() {
 <script>
 function myOuvp() {
   location.replace("https://online-url-video-player.blogspot.com/")
+}
+</script>
+<script>
+function myXvideos() {
+  location.replace("https://redirect-torgle.ml/")
 }
 </script>
 </body>
